adds grid to home page with centered placeholder images

--- a/index.html
+++ b/index.html
@@ -26,16 +26,24 @@
             </label>
             <ul class="navList">
                 <li><a class="active" href="#">Home</a></li>
-                <li><a href="#">shop rings</a></li>
-                <li><a href="#">shop necklaces</a></li>
-                <li><a href="#">shop bracelets</a></li>
+                <li><a href="#">Shop Rings</a></li>
+                <li><a href="#">Shop Necklaces</a></li>
+                <li><a href="#">Shop Bracelets</a></li>
             </ul>
+
         </nav>
 
     </header>
 
     <main>
-        
+
+        <h1>Browse Our Fine Jewelry</h1>
+            <div class="productImg">
+                <img class="ringImg" src="images/ring.jpg">
+                <img class="ringImg" src="images/ring.jpg">
+                <img class="ringImg" src="images/ring.jpg">
+                <img class="ringImg" src="images/ring.jpg">
+            </div>
     </main>
     
     <footer>
