fixed some grid errors

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <main>
 
-        <h1>Browse Our Fine Jewelry</h1>
+        <h1 class="mainTxt">Browse Our Fine Jewelry</h1>
             <div class="productImg">
                 <img class="ringImg" src="images/ring.jpg">
                 <img class="ringImg" src="images/ring.jpg">
