fixed margins on certain grid items

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
         <h1 class="mainTxt">Browse Our Fine Jewelry</h1>
             <div class="productImg">
-                <img class="ringImg" src="images/ring.jpg">
-                <img class="ringImg" src="images/ring.jpg">
-                <img class="ringImg" src="images/ring.jpg">
-                <img class="ringImg" src="images/ring.jpg">
+                <div class="productBox"><img class="ringImg" src="images/ring.jpg"></div>
+                <div class="productBox"><img class="ringImg" src="images/ring.jpg"></div>
+                <div class="productBox"><img class="ringImg" src="images/ring.jpg"></div>
+                <div class="productBox"><img class="ringImg" src="images/ring.jpg"></div>
             </div>
     </main>
     
