added buttons to bottom of div images to use for links

--- a/index.html
+++ b/index.html
@@ -38,11 +38,28 @@
     <main>
 
         <h1 class="mainTxt">Browse Our Fine Jewelry</h1>
+
             <div class="productImg">
-                <div class="productBox"><img class="ringImg" src="images/ring.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/ring.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/ring.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/ring.jpg"></div>
+                <div class="productBox"><img class="ringImg" src="images/ring.jpg">
+                    <div class="productBtn">
+                        <button>ssssss</button>
+                    </div>
+                </div>
+                <div class="productBox"><img class="ringImg" src="images/ring.jpg">
+                    <div class="productBtn">
+                        <button>ssssss</button>
+                    </div>
+                </div>
+                <div class="productBox"><img class="ringImg" src="images/ring.jpg">
+                    <div class="productBtn">
+                        <button>ssssss</button>
+                    </div>
+                </div>
+                <div class="productBox"><img class="ringImg" src="images/ring.jpg">
+                    <div class="productBtn">
+                        <button>ssssss</button>
+                    </div>
+                </div>
             </div>
     </main>
     
