added comments in css file for easier readability

--- a/rings.html
+++ b/rings.html
@@ -25,10 +25,10 @@
                 <i class="fa-solid fa-bars"></i>
             </label>
             <ul class="navList">
-                <li><a href="#">Home</a></li>
-                <li><a href="rings.html">Shop Rings</a></li>
-                <li><a href="necklaces.html">Shop Necklaces</a></li>
-                <li><a href="bracelets.html">Shop Bracelets</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a class="active" href="rings.html">Shop Rings</a></li>
+                <li><a class="active" href="necklaces.html">Shop Necklaces</a></li>
+                <li><a class="active" href="bracelets.html">Shop Bracelets</a></li>
             </ul>
 
         </nav>
@@ -37,18 +37,17 @@
 
     <main>
 
-        <h1 class="mainTxt">Browse Our Fine Jewelry</h1>
+        <h1 class="mainTxt">only the greatest rings to be found here</h1>
 
             <div class="productImg">
-                <div class="productBox"><img class="ringImg" src="images/ring.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/a pretty one.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/11.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/coming soon.jpg"></div>
+                <div class="productBox"><img class="ringImg" src="images/ring.jpg"><p></p></div>
+                <div class="productBox"><img class="ringImg" src="images/yay.jpg"></div>
+                <div class="productBox"><img class="ringImg" src="images/ruby.jpg"></div>
+                <div class="productBox"><img class="ringImg" src="images/expensive.jpg"></div>
+                <div class="productBox"><img class="ringImg" src="images/another ring.jpg"></div>
+                <div class="productBox"><img class="ringImg" src="images/888.jpg"></div>
             </div>
-
-            
     </main>
-
     
     <footer>
         <p>Created by Nathan Graham</p>
