--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesseract Jewelry Store</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="stylesHome.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9a1089e2b1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -39,11 +39,25 @@
 
         <h1 class="mainTxt">Browse Our Fine Jewelry</h1>
 
-            <div class="productImg">
-                <div class="productBox"><img class="ringImg" src="images/ring.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/a pretty one.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/11.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/coming soon.jpg"></div>
+            <div class="productImgGrid">
+
+                <div class="productBox">
+                    <img class="ringImg" src="images/ringgg.webp">
+                    <button class="productBoxBtn">Shop Rings</button>
+                </div>
+                <div class="productBox">
+                    <img class="ringImg" src="images/adept.jpg">
+                    <button class="productBoxBtn">Shop Necklaces</button>
+                </div>
+                <div class="productBox">
+                    <img class="ringImg" src="images/pro.jpg">
+                    <button class="productBoxBtn">Shop Bracelets</button>
+                </div>
+                <div class="productBox">
+                    <img class="ringImg" src="images/coming soon.jpg">
+                    <button class="productBoxBtn">Coming Soon!</button>
+                </div>
+
             </div>
 
             
