--- a/rings.html
+++ b/rings.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesseract Jewelry Store</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="stylesRings.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9a1089e2b1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -39,13 +39,25 @@
 
         <h1 class="mainTxt">only the greatest rings to be found here</h1>
 
-            <div class="productImg">
-                <div class="productBox"><img class="ringImg" src="images/ring.jpg"><p></p></div>
-                <div class="productBox"><img class="ringImg" src="images/yay.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/ruby.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/expensive.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/another ring.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/888.jpg"></div>
+            <div class="productImgGrid">
+                <div class="productBox">
+                    <img class="ringImg" src="images/ring.jpg">
+                </div>
+                <div class="productBox">
+                    <img class="ringImg" src="images/yay.jpg">
+                </div>
+                <div class="productBox">
+                    <img class="ringImg" src="images/ruby.jpg">
+                </div>
+                <div class="productBox">
+                    <img class="ringImg" src="images/expensive.jpg">
+                </div>
+                <div class="productBox">
+                    <img class="ringImg" src="images/another ring.jpg">
+                </div>
+                <div class="productBox">
+                    <img class="ringImg" src="images/888.jpg">
+                </div>
             </div>
     </main>
     
