finished necklase and bracelet pages of site and added prices

--- a/bracelets.html
+++ b/bracelets.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesseract Jewelry Store</title>
-    <link href="stylesRings.css" rel="stylesheet">
+    <link href="stylesJewelry.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9a1089e2b1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -40,12 +40,40 @@
         <h1 class="mainTxt">only the greatest rings to be found here</h1>
 
             <div class="productImgGrid">
-                <div class="productBox"><img class="ringImg" src="images/ring.jpg"><p></p></div>
-                <div class="productBox"><img class="ringImg" src="images/yay.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/ruby.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/expensive.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/another ring.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/888.jpg"></div>
+
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/bracelet1.jpg">
+                    <div class="Price">Price: $299.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/bracelet2.webp">
+                    <div class="Price">Price: $155.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/bracelet3.jpg">
+                    <div class="Price">Price: $319.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/bracelet4.webp">
+                    <div class="Price">Price: $99.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/bracelet5.webp">
+                    <div class="Price">Price: $175.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/bracelet6.jpg">
+                    <div class="Price">Price: $199.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/bracelet7.jpg">
+                    <div class="Price">Price: $250.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/bracelet8.jpg">
+                    <div class="Price">Price: $245.99</div>
+                </div>
+
             </div>
     </main>
     
