--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
             <div class="productImgGrid">
 
                 <div class="productBox">
-                    <img class="ringImg" src="images/ringgg.webp">
+                    <img class="productImg" src="images/rings.webp">
                     <button class="productBoxBtn">Shop Rings</button>
                 </div>
                 <div class="productBox">
-                    <img class="ringImg" src="images/adept.jpg">
+                    <img class="productImg" src="images/necklaces.jpg">
                     <button class="productBoxBtn">Shop Necklaces</button>
                 </div>
                 <div class="productBox">
-                    <img class="ringImg" src="images/pro.jpg">
+                    <img class="productImg" src="images/bracelets.jpg">
                     <button class="productBoxBtn">Shop Bracelets</button>
                 </div>
                 <div class="productBox">
-                    <img class="ringImg" src="images/coming soon.jpg">
+                    <img class="productImg" src="images/coming soon.jpg">
                     <button class="productBoxBtn">Coming Soon!</button>
                 </div>
 
