--- a/necklaces.html
+++ b/necklaces.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesseract Jewelry Store</title>
-    <link href="stylesRings.css" rel="stylesheet">
+    <link href="stylesJewelry.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9a1089e2b1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -40,12 +40,40 @@
         <h1 class="mainTxt">only the greatest rings to be found here</h1>
 
             <div class="productImgGrid">
-                <div class="productBox"><img class="ringImg" src="images/ring.jpg"><p></p></div>
-                <div class="productBox"><img class="ringImg" src="images/yay.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/ruby.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/expensive.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/another ring.jpg"></div>
-                <div class="productBox"><img class="ringImg" src="images/888.jpg"></div>
+
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/necklace1.jpg">
+                    <div class="Price">Price: $419.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/necklace2.jpg">
+                    <div class="Price">Price: $305.95</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/necklace3.jpg">
+                    <div class="Price">Price: $485.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/necklace4.jpg">
+                    <div class="Price">Price: $210.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/necklace5.png">
+                    <div class="Price">Price: $2</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/necklace6.jpg">
+                    <div class="Price">Price: $365.95</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/necklace7.jpg">
+                    <div class="Price">Price: $399.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/necklace8.jpg">
+                    <div class="Price">Price: $9.99</div>
+                </div>
+
             </div>
     </main>
     
