--- a/rings.html
+++ b/rings.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesseract Jewelry Store</title>
-    <link href="stylesRings.css" rel="stylesheet">
+    <link href="stylesJewelry.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9a1089e2b1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -40,24 +40,40 @@
         <h1 class="mainTxt">only the greatest rings to be found here</h1>
 
             <div class="productImgGrid">
+
                 <div class="productBox">
-                    <img class="ringImg" src="images/ring.jpg">
+                    <img class="jewelryImg" src="images/ring1.jpg">
+                    <div class="Price">Price: $199.99</div>
                 </div>
                 <div class="productBox">
-                    <img class="ringImg" src="images/yay.jpg">
+                    <img class="jewelryImg" src="images/ring2.jpg">
+                    <div class="Price">Price: $249.95</div>
                 </div>
                 <div class="productBox">
-                    <img class="ringImg" src="images/ruby.jpg">
+                    <img class="jewelryImg" src="images/ring3.jpg">
+                    <div class="Price">Price: $315.99</div>
                 </div>
                 <div class="productBox">
-                    <img class="ringImg" src="images/expensive.jpg">
+                    <img class="jewelryImg" src="images/ring4.jpg">
+                    <div class="Price">Price: $99.99</div>
                 </div>
                 <div class="productBox">
-                    <img class="ringImg" src="images/another ring.jpg">
+                    <img class="jewelryImg" src="images/ring5.jpg">
+                    <div class="Price">Price: $145.99</div>
                 </div>
                 <div class="productBox">
-                    <img class="ringImg" src="images/888.jpg">
+                    <img class="jewelryImg" src="images/ring6.jpg">
+                    <div class="Price">Price: $235.99</div>
                 </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/ring7.webp">
+                    <div class="Price">Price: $319.99</div>
+                </div>
+                <div class="productBox">
+                    <img class="jewelryImg" src="images/ring8.webp">
+                    <div class="Price">Price: $179.99</div>
+                </div>
+
             </div>
     </main>
     
