--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Tesseract Jewelry Store</title>
     <link href="stylesHome.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9a1089e2b1.js" crossorigin="anonymous"></script>
+    <script defer src="script.js"></script>
 </head>
 
 <body>
@@ -62,18 +63,22 @@
             
             <h2 id="contactArea">Contact Us</h2>
 
-        <p id="contactMsg">Need to reach us? Feel free to contact us using the form below.</p>
+        <p id="contactMsg">Need to reach us? Leave your name and email in the form below and we will get back to you as soon as possible.</p>
 
-        <form id="siteContactForm" name="contactForm">
+         <div id="error">   </div>   
 
-            <label id="nameLabel">Full Name:</label>
+        <form action="/" method="GET" id="form">
+
+            <label for="name" id="nameLabel">Name:</label>
             <div id="nameInput">
-                <input type="text" name="name">   
+                <input id="nameF" type="text" name="nameF" placeholder="Enter Your Name">
+                <span id="textN"></span>   
             </div>
             
-            <label id="emailLabel">Email:</label>
+            <label for="email" id="emailLabel">Email:</label>
             <div id="emailInput">
-                <input type="text" name="email">
+                <input id="email" type="text" name="email" placeholder="Enter Email Address">
+                <span id="textE"></span>
             </div>
 
             <div id="submitBtn">
