changed header text on each of the pages

--- a/bracelets.html
+++ b/bracelets.html
@@ -37,7 +37,7 @@
 
     <main>
 
-        <h1 class="mainTxt">only the greatest rings to be found here</h1>
+        <h1 class="mainTxt">Your wrist will love these!</h1>
 
             <div class="productImgGrid">
 
