--- a/rings.html
+++ b/rings.html
@@ -37,7 +37,7 @@
 
     <main>
 
-        <h1 class="mainTxt">only the greatest rings to be found here</h1>
+        <h1 class="mainTxt">Only the greatest rings to be found here</h1>
 
             <div class="productImgGrid">
 
