--- a/necklaces.html
+++ b/necklaces.html
@@ -37,7 +37,7 @@
 
     <main>
 
-        <h1 class="mainTxt">only the greatest rings to be found here</h1>
+        <h1 class="mainTxt">Finest prices for the finest necklaces</h1>
 
             <div class="productImgGrid">
 
